<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_f4"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/locate_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:clickable="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/abc_list_selector_holo_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/ic_location"
                android:gravity="center"
                android:text="@string/locate"
                android:textColor="@color/gray_33"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/current_address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gray_a9"
                android:textSize="12sp" />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/address_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/chevron_right_gray"
            android:enabled="false"
            android:inputType="none"
            android:text="@string/receive_address"
            android:textColor="@color/gray_33"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/city_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/current_city_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:inputType="none"
            android:text="@string/current_selected_city"
            android:textColor="@color/gray_33"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/select_city_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/switch_city"
            android:textColor="@color/green" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_question_green"
            android:enabled="false"
            android:inputType="none"
            android:text="@string/address_recommendation"
            android:textColor="@color/gray_33"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>
